@@ -17,10 +17,10 @@ categories = ["command-line-utilities"]
 anyhow = "1.0.62"
 clap = { version = "3.2.17", features = ["derive"] }
 clap_complete = "3.2.4"
-image = "0.24.3"
-qrcode = { git = "https://github.com/sorairolake/qrcode-rust.git", rev = "0f75a68", version = "0.13.0" }
+image = "0.23.14"
+qrcode = "0.12.0"
 resvg = { version = "0.23.0", default-features = false, optional = true }
-rqrr = "0.5.1"
+rqrr = "0.4.0"
 sysexits = "0.3.0"
 tiny-skia = { version = "0.6.6", optional = true }
 usvg = { version = "0.23.0", default-features = false, optional = true }
