@@ -318,9 +318,6 @@ pub enum InputFormat {
     /// JPEG.
     Jpeg,
 
-    /// OpenEXR.
-    OpenExr,
-
     /// Portable Network Graphics.
     Png,
 
@@ -355,7 +352,6 @@ impl TryFrom<InputFormat> for ImageFormat {
             InputFormat::Hdr => Ok(Self::Hdr),
             InputFormat::Ico => Ok(Self::Ico),
             InputFormat::Jpeg => Ok(Self::Jpeg),
-            InputFormat::OpenExr => Ok(Self::OpenExr),
             InputFormat::Png => Ok(Self::Png),
             InputFormat::Pnm => Ok(Self::Pnm),
             #[cfg(feature = "decode-from-svg")]
